# nukebar

./: .build.yml  .gitignore  LICENSE  meson.build  meson_options.txt
src/: bar.c  cat.h  configuration.h  draw.h  hello.h  ini.h  ini_base.h  render.h  shm.h  sstrings.h  structs.h  utils.h  wayland.h
